--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,34 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/logoped
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.format_sql=true
+
+#flyway
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration/postgres
+
+#Paths
+api.path=/api/v1
+
+
+#JWT authorization
+jwt.secret=secure
+jwt.prefix=Bearer 
+jwt.header=Authorization
+jwt.expiration=604800
+
+#JWT activation key
+jwt.claimSimpleKey=simpleKy
+jwt.claimIssuedAt=issuedAt
+jwt.claimExpiration=expiration
+
+#roles
+role.user=ROLE_USER
+role.logoped=ROLE_LOGOPED
+role.admin=ROLE_ADMIN
+
+#mailtrap
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=d7fea9e5627a66
+spring.mail.password=18d3285d8c2e93
+root.path=http://localhost:8080/api/v1/logoped/activate/
