add makefile and docker change

--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - db
     env_file:
       - service.env
+    volumes:
+      - D:\logoped-service\:/logoped-service
   db:
     image: 'postgres'
     env_file:
